--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "errno.h": "c"
+        "errno.h": "c",
+        "kvstore.h": "c",
+        "string.h": "c"
     }
 }
