--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,4 +1,5 @@
 {
+    //gcc -o t -I ../NtyCo/core/  -L ../NtyCo/  coroutine.c   -lntyco -lpthread -ldl
     "tasks": [
         {
             "type": "cppbuild",
@@ -23,7 +24,87 @@
             ],
             "group": "build",
             "detail": "调试器生成的任务。"
-        }
+        },
+        {
+            "type": "cppbuild",
+            "label": "test_ntyco_array",
+            "command": "/usr/bin/gcc",
+            "args": [
+                "-fdiagnostics-color=always",
+                "-g",
+                "${fileDirname}/../io_src/coroutine.c",
+                "${fileDirname}/kvs_array.c",
+                "${fileDirname}/kvstore.c",
+                "-I",
+                "${fileDirname}/../include",
+                "-I",
+                "../NtyCo/core/",
+                "-L",
+                "../NtyCo/",
+                "-o",
+                "${fileDirname}/${fileBasenameNoExtension}",
+                "-lntyco",
+                "-lpthread",
+                "-ldl"
+            ],
+            "options": {
+                "cwd": "${fileDirname}"
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": "build",
+            "detail": "调试器生成的任务。"
+        },
+        {
+            "type": "cppbuild",
+            "label": "test_case",
+            "command": "/usr/bin/gcc",
+            "args": [
+                "-fdiagnostics-color=always",
+                "-g",
+                "${fileDirname}/testcase.c",
+                
+                
+              
+                "-o",
+                "${fileDirname}/${fileBasenameNoExtension}",
+               
+            ],
+            "options": {
+                "cwd": "${fileDirname}"
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": "build",
+            "detail": "调试器生成的任务。"
+        },
+        {
+            "type": "cppbuild",
+            "label": "test_reac_hash",
+            "command": "/usr/bin/gcc",
+            "args": [
+                "-fdiagnostics-color=always",
+                "-g",
+                "${fileDirname}/../io_src/reactor.c",
+                "${fileDirname}/kvs_hash.c",
+                "${fileDirname}/kvstore.c",
+                "-I",
+                "${fileDirname}/../include",
+                "-o",
+                "${fileDirname}/${fileBasenameNoExtension}"
+            ],
+            "options": {
+                "cwd": "${fileDirname}"
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": "build",
+            "detail": "调试器生成的任务。"
+        },
+        
     ],
     "version": "2.0.0"
 }
