--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -104,6 +104,54 @@
             "group": "build",
             "detail": "调试器生成的任务。"
         },
+        {
+            "type": "cppbuild",
+            "label": "test_reac_skip",
+            "command": "/usr/bin/gcc",
+            "args": [
+                "-fdiagnostics-color=always",
+                "-g",
+                "${fileDirname}/../io_src/reactor.c",
+                "${fileDirname}/kvs_skiptable.c",
+                "${fileDirname}/kvstore.c",
+                "-I",
+                "${fileDirname}/../include",
+                "-o",
+                "${fileDirname}/${fileBasenameNoExtension}"
+            ],
+            "options": {
+                "cwd": "${fileDirname}"
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": "build",
+            "detail": "调试器生成的任务。"
+        },
+        {
+            "type": "cppbuild",
+            "label": "testskip1",
+            "command": "/usr/bin/gcc",
+            "args": [
+                "-fdiagnostics-color=always",
+                "-g",
+                "${fileDirname}/kvs_skiptable.c",
+                "${fileDirname}/kvstore.c",
+                "${fileDirname}/../io_src/reactor.c",
+                "-I",
+                "${fileDirname}/../include",
+                "-o",
+                "${fileDirname}/${fileBasenameNoExtension}"
+            ],
+            "options": {
+                "cwd": "${fileDirname}"
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": "build",
+            "detail": "调试器生成的任务。"
+        },
         
     ],
     "version": "2.0.0"
